--- a/Pocket-Pitch/src/App.css
+++ b/Pocket-Pitch/src/App.css
@@ -2,3 +2,10 @@
     font-family: Poppins;
     font-weight: 400;
 }
+
+.ppTitle {
+    background: -webkit-linear-gradient(rgb(237, 164, 176), red);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    
+}
